<resources>
    <string name="app_name">Buzz\'em</string>
    <string name="email_te">Email</string>
    <string name="password_te">New password</string>
    <string name="password_login_te">Password</string>
    <string name="reenter_password_te">Confirm password</string>
    <string name="login_bu_text">Login</string>
    <string name="signup_bu_text">Sign up</string>
    <string name="create_account_link">Don\'t have an account?</string>
    <string name="sign_up_link">Tap to sign up!</string>
    <string name="login_link">Tap for login page!</string>
    <string name="email_example">example@email.com</string>
    <string name="nr_example">69</string>
    <string name="question_description">Question image for problems</string>
    <string name="login_fail">Email or password is incorrect</string>
    <string name="passwords_not_equal">The passwords are not the same</string>
    <string name="email_sent">Confirmation email sent :)</string>
    <string name="wait_for_verif">You must verify your email before signing in!</string>
    <string name="search_bar">Search</string>
    <string name="account_button_settings">Account</string>
    <string name="notifications_button_settings">Notifications</string>
    <string name="logout_button_settings">Logout</string>
    <string name="login_question_text">In order to use the app you need to have an account. If you
    are new then tap the sign up button!</string>
    <string name="login_question_title">Welcome to Buzz\'em!</string>
    <string name="signup_question_text">This is the sign up page!\nAfter you fill in the data
    and hit the button you will receive a confirmation email.</string>
    <string name="signup_question_title">Sign up to Buzz\'em!</string>
    <string name="reset_pass">Reset your password</string>
    <string name="reset_email">Change your email</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_alert_title">Delete your account</string>
    <string name="delete_account_alert_text">Are you sure you want to permanently delete your account?</string>
    <string name="reset_email_alert_title">Reset your email</string>
    <string name="reset_email_alert_text">Fill in your new email and hit submit. After that you
    will be signed out and will receive a new confirmation email on your new email address.</string>
    <string name="close_bu">Close</string>
    <string name="flash_enabled">Flash</string>
    <string name="vibration_enabled">Vibration</string>
    <string name="wake_up_screen_enabled">Wake up screen</string>
    <string name="notification_enabled">Notification message</string>
    <string name="notification_miliseconds">Buzz duration</string>
    <string name="seconds">seconds</string>
    <string name="notif_question_title">Questions</string>
    <string name="notif_item_title">Customize everything!</string>
    <string name="notif_item_button">Cool (-_-)</string>
    <string name="notif_item_message">You can customize every aspect of your buzzes.
    Don\'t want to be flashed? Uncheck that motherf***er and no more flashing, that simple!
    Buzzes are way too short for you to hear them? Make them longer, just slide that seek bar
    and watch how magic happens :)</string>
    <string name="to_know">To know</string>
    <string name="to_know_search">Here you can search for users who are NOT your friends already.
    The text to search must contain at least 5 characters. To add someone to your friends list just tap
    on their email and that\'s it! Keep in mind that you are allowed to have at max 10 friends, choose
    your friends carefully ;)</string>
    <string name="yes_sir">Yes, sir!</string>
</resources>
