<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2598fc"
    android:orientation="vertical"
    android:padding="5pt"
    tools:context=".activities.AccountActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:onClick="resetPassEvent"
        android:text="@string/reset_pass" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt"
        android:background="@drawable/button_background"
        android:onClick="changeEmailEvent"
        android:text="@string/reset_email" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt"
        android:background="@drawable/button_background"
        android:onClick="deleteEvent"
        android:text="@string/delete_account" />
</LinearLayout>