<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_purple"
    tools:context=".activities.SignUpActivity">

    <EditText
        android:id="@+id/etEmailSign"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/darkerOrange"
        android:ems="10"
        android:hint="@string/email_te"
        android:inputType="textEmailAddress"
        android:textColor="@color/orangeText"
        android:textColorHint="@color/orangeText"
        android:textColorLink="@color/orangeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPasswordSign"
        android:layout_width="283dp"
        android:layout_height="47dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/darkerOrange"
        android:ems="10"
        android:hint="@string/password_te"
        android:inputType="textPassword"
        android:textColor="@color/orangeText"
        android:textColorHint="@color/orangeText"
        android:textColorLink="@color/orangeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailSign" />

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="283dp"
        android:layout_height="47dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/darkerOrange"
        android:ems="10"
        android:hint="@string/reenter_password_te"
        android:inputType="textPassword"
        android:textColor="@color/orangeText"
        android:textColorHint="@color/orangeText"
        android:textColorLink="@color/orangeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordSign" />

    <Button
        android:id="@+id/buSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_background"
        android:onClick="signUpEvent"
        android:text="@string/signup_bu_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordConfirm" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/login_link"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buSignUp" />

    <ImageView
        android:id="@+id/ivQuestionsSign"
        android:layout_width="20pt"
        android:layout_height="20pt"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/question_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/questions_circular_button" />
</android.support.constraint.ConstraintLayout>