<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background_purple"
tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/darkerOrange"
        android:ems="10"
        android:hint="@string/email_te"
        android:inputType="textEmailAddress"
        android:textColor="@color/orangeText"
        android:textColorHint="@color/orangeText"
        android:textColorLink="@color/orangeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/etPassword"
    android:layout_width="283dp"
    android:layout_height="47dp"
    android:layout_marginTop="44dp"
    android:backgroundTint="@color/darkerOrange"
    android:ems="10"
    android:hint="@string/password_login_te"
    android:inputType="textPassword"
    android:textColor="@color/orangeText"
    android:textColorHint="@color/orangeText"
    android:textColorLink="@color/orangeText"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/etEmail" />

<Button
    android:id="@+id/buSignUp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="44dp"
    android:background="@drawable/button_background"
    android:text="@string/login_bu_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvQuestAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/create_account_link"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buSignUp" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/sign_up_link"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestAccount" />

    <ImageView
        android:id="@+id/ivQuestions"
        android:layout_width="20pt"
        android:layout_height="20pt"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp"
        app:layout_constraintVertical_bias="0.865"
        app:srcCompat="@drawable/questions_circular_button" />
</android.support.constraint.ConstraintLayout>